# MXU

./: AGENTS.md  README.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml
src-tauri/src/: dummy_controller.rs  lib.rs  main.rs  mxu_actions.rs  web_server.rs
src-tauri/src/commands/: app_config.rs  download.rs  file_ops.rs  maa_agent.rs  maa_core.rs  mod.rs  system.rs  telemetry.rs  types.rs  utils.rs
src/components/: ActionItem.tsx  AddTaskPanel.tsx  ContextMenu.tsx  DashboardView.tsx  FormControls.tsx  InstallConfirmModal.tsx  OnboardingOverlay.tsx  OptionEditor.tsx  SchedulePanel.tsx  SettingsPage.tsx  TabBar.tsx  TaskItem.tsx  TaskList.tsx  Toolbar.tsx  WelcomeDialog.tsx
src/components/settings/: DebugSection.tsx  GeneralSection.tsx  HotkeySection.tsx
src/hooks/: useTaskRunner.ts
src/i18n/locales/: en-US.ts  ja-JP.ts  ko-KR.ts  zh-CN.ts  zh-TW.ts
src/services/: configService.ts  interfaceLoader.ts  maaService.ts  scheduleService.ts  telemetryService.ts  updateService.ts  wsService.ts
src/stores/: appStore.ts  helpers.ts  types.ts
src/types/: config.ts  interface.ts  maa.ts  pretasks.ts  specialTasks.ts
src/utils/: backendApi.ts  logger.ts  pipelineOverride.ts  tabExportImport.ts  taskControllerCache.ts  taskSegmentation.ts  useMaaCallbackLogger.ts  windowUtils.ts
